# pr-pyserial

./: .gitignore  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yaml
documentation/: appendix.rst  changelog.rst  conf.py  examples.rst  index.rst  pyserial.rst  pyserial_api.rst  shortintro.rst  tools.rst  url_handlers.rst
examples/: at_protocol.py  setup-miniterm-py2exe.py  setup-rfc2217_server-py2exe.py  setup-wxTerminal-py2exe.py  wxTerminal.py
requirements/: README.rst
requirements/docs/: pyproject.toml  requirements.txt
requirements/test/: requirements-coverage.txt  requirements.txt
serial/: __init__.py  rfc2217.py  rs485.py  serialposix.py  serialutil.py  serialwin32.py
serial/tools/: hexlify_codec.py  list_ports.py  list_ports_common.py  list_ports_linux.py  list_ports_osx.py  list_ports_windows.py  miniterm.py
serial/tools/generate_test_asset/: __init__.py  _common.py  _sysfs.py
serial/tools/test_asset_generator/: __init__.py  _sysfs.py
serial/urlhandler/: protocol_cp2110.py  protocol_loop.py  protocol_socket.py
test/: run_all_tests.py  test.py  test_advanced.py  test_cancel.py  test_context.py  test_hexlify_code.py  test_high_load.py  test_iolib.py  test_list_ports_sysfs.py  test_pty.py  test_readline.py  test_settings_dict.py  test_threaded.py  test_timeout_class.py  test_url.py  test_util.py
test/assets/: README.rst
test/assets/sysfs/: ATEN--UC-232A.json  Linux-6.14.0--ttyS0.json  SparkFun--IoT-RedBoard-RP2350.json
test/cli/: conftest.py  test_asset_generator.py  test_generate_test_asset.py  test_list_ports.py  test_list_ports_common.py  test_list_ports_sysfs.py
test/handlers/: protocol_test.py
